--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -12,5 +12,11 @@ jobs:
     steps:
       - uses: anmol098/waka-readme-stats@master
         with:
+          SHOW_DAYS_OF_WEEK: "False"
+          SHOW_PROFILE_VIEWS: "False"
+          SHOW_LINES_OF_CODE: "True"
+          SHOW_PROJECTS: "False"
+          SHOW_EDITORS: "True"
+          SHOW_SHORT_INFO: "False"
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
